--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,7 +24,35 @@
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 } */
+ 
+/* html {
+  overflow-y: scroll;
+  scrollbar-gutter: stable;
+} */
 
+html {
+  scrollbar-gutter: stable;
+  scrollbar-width: thin;
+  scrollbar-color: #282828 rgba(255, 255, 255, 0.05);
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.05);
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #282828, #282828);
+  border-radius: 8px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #282828, #282828);
+}
 
 body { 
   font-family: 'Inter', system-ui, -apple-system, 'Segoe UI', Roboto, 'Noto Sans', sans-serif; 
